pom’s surefire config: set Xmx etc